<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="6" >

    <RelativeLayout
        android:id="@+id/umra_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/toc_background"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/ornament_img_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ornament_list" />

        <com.kdehairy.widgets.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ornament_img_1"
            android:text="@string/toc_1"
            android:textSize="@dimen/TocTextSize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/separator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/umra_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/toc_background"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/ornament_img_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ornament_list" />

        <com.kdehairy.widgets.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ornament_img_2"
            android:text="@string/toc_2"
            android:textSize="@dimen/TocTextSize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/separator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/umra_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/toc_background"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/ornament_img_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ornament_list" />

        <com.kdehairy.widgets.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ornament_img_3"
            android:text="@string/toc_3"
            android:textSize="@dimen/TocTextSize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/separator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/umra_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/toc_background"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/ornament_img_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ornament_list" />

        <com.kdehairy.widgets.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ornament_img_4"
            android:text="@string/toc_4"
            android:textSize="@dimen/TocTextSize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/separator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/umra_5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/toc_background"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/ornament_img_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ornament_list" />

        <com.kdehairy.widgets.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ornament_img_5"
            android:text="@string/toc_5"
            android:textSize="@dimen/TocTextSize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/separator" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/umra_6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/toc_background"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/ornament_img_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ornament_list" />

        <com.kdehairy.widgets.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ornament_img_6"
            android:text="@string/toc_6"
            android:textSize="@dimen/TocTextSize" />
    </RelativeLayout>

</LinearLayout>